Projeto/src/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from src/Parser.y
-----------------------------------------------------------------------------

state 41 contains 1 shift/reduce conflicts.
state 129 contains 1 shift/reduce conflicts.

terminal const is unused
terminal break is unused
terminal continue is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parser -> Prog                              (0)
	Prog -> FuncDeclList                               (1)
	FuncDeclList -> FunDecl FuncDeclList               (2)
	FuncDeclList -> FunDecl                            (3)
	FunDecl -> Type ident '(' ParamList ')' Block      (4)
	ParamList -> Param ',' ParamList                   (5)
	ParamList -> Param                                 (6)
	ParamList ->                                       (7)
	Param -> Type ident                                (8)
	Stmt -> SimpleExp ';'                              (9)
	Stmt -> AssignStmTE                                (10)
	Stmt -> AssignStmT                                 (11)
	Stmt -> AssignStm                                  (12)
	Stmt -> IfThen                                     (13)
	Stmt -> IfThenElse                                 (14)
	Stmt -> Block                                      (15)
	Stmt -> While                                      (16)
	Stmt -> For                                        (17)
	Stmt -> Return                                     (18)
	SimpleExp -> Exp                                   (19)
	SimpleExp -> AssignStmTE                           (20)
	SimpleExp -> AssignStmT                            (21)
	AssignStmTE -> Type ident '=' Exp                  (22)
	AssignStmT -> Type IdentList                       (23)
	AssignStm -> VarAccess '=' Exp ';'                 (24)
	IfThen -> if '(' Exp ')' Stmt                      (25)
	IfThenElse -> if '(' Exp ')' Stmt else Stmt        (26)
	Block -> '{' StmtList '}'                          (27)
	While -> while '(' Exp ')' Stmt                    (28)
	For -> for '(' AssignStm Exp ';' Exp ')' Stmt      (29)
	Return -> return Exp ';'                           (30)
	StmtList -> Stmt StmtList                          (31)
	StmtList ->                                        (32)
	Exp -> num                                         (33)
	Exp -> real                                        (34)
	Exp -> VarAccess                                   (35)
	Exp -> str                                         (36)
	Exp -> '(' Exp ')'                                 (37)
	Exp -> VarAccess PosOp                             (38)
	Exp -> FunCall                                     (39)
	Exp -> ScanInt '(' ')'                             (40)
	Exp -> PrintInt '(' Exp ')'                        (41)
	Exp -> PrintStr '(' str ')'                        (42)
	Exp -> true                                        (43)
	Exp -> false                                       (44)
	Exp -> '!' Exp                                     (45)
	Exp -> Exp '+' Exp                                 (46)
	Exp -> Exp '-' Exp                                 (47)
	Exp -> Exp '*' Exp                                 (48)
	Exp -> Exp '/' Exp                                 (49)
	Exp -> Exp '%' Exp                                 (50)
	Exp -> Exp '==' Exp                                (51)
	Exp -> Exp '!=' Exp                                (52)
	Exp -> Exp '<' Exp                                 (53)
	Exp -> Exp '<=' Exp                                (54)
	Exp -> Exp '>' Exp                                 (55)
	Exp -> Exp '>=' Exp                                (56)
	Exp -> Exp '&&' Exp                                (57)
	Exp -> Exp '||' Exp                                (58)
	VarAccess -> ident                                 (59)
	VarAccess -> ident '[' Exp ']'                     (60)
	PosOp -> '++'                                      (61)
	PosOp -> '--'                                      (62)
	FunCall -> ident '(' ExpList ')'                   (63)
	ExpList -> Exp ',' ExpList                         (64)
	ExpList -> Exp                                     (65)
	ExpList ->                                         (66)
	IdentList -> VarAccess ',' IdentList               (67)
	IdentList -> VarAccess                             (68)
	Type -> int                                        (69)
	Type -> bool                                       (70)
	Type -> double                                     (71)
	Type -> string                                     (72)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	num            { NUM $$ }
	real           { REAL $$ }
	str            { STR $$ }
	ident          { ID $$ }
	true           { TRUE }
	false          { FALSE }
	if             { IF }
	else           { ELSE }
	while          { WHILE }
	for            { FOR }
	return         { RETURN }
	const          { CONST }
	break          { BREAK }
	continue       { CONTINUE }
	'('            { LPAREN }
	')'            { RPAREN }
	','            { COMMA }
	';'            { SEMICOLON }
	'{'            { LBRACE }
	'}'            { RBRACE }
	'['            { LBRACKET }
	']'            { RBRACKET }
	'++'           { PLUSPLUS }
	'--'           { MINUSMINUS }
	'+'            { PLUS }
	'-'            { MINUS }
	'*'            { MULT }
	'/'            { DIV }
	'%'            { MOD }
	'=='           { EQUAL }
	'!='           { NOTEQUAL }
	'<'            { LTHAN }
	'<='           { LTHANEQUAL }
	'>'            { GTHAN }
	'>='           { GTHANEQUAL }
	'!'            { NOT }
	'&&'           { AND }
	'||'           { OR }
	'='            { ASSIGN }
	double         { DOUBLE }
	int            { INT }
	bool           { BOOL }
	string         { STRING }
	PrintInt       { PRINTINT }
	ScanInt        { SCANINT }
	PrintStr       { PRINTSTR }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parser   rule  0
	Prog            rule  1
	FuncDeclList    rules 2, 3
	FunDecl         rule  4
	ParamList       rules 5, 6, 7
	Param           rule  8
	Stmt            rules 9, 10, 11, 12, 13, 14, 15, 16, 17, 18
	SimpleExp       rules 19, 20, 21
	AssignStmTE     rule  22
	AssignStmT      rule  23
	AssignStm       rule  24
	IfThen          rule  25
	IfThenElse      rule  26
	Block           rule  27
	While           rule  28
	For             rule  29
	Return          rule  30
	StmtList        rules 31, 32
	Exp             rules 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58
	VarAccess       rules 59, 60
	PosOp           rules 61, 62
	FunCall         rule  63
	ExpList         rules 64, 65, 66
	IdentList       rules 67, 68
	Type            rules 69, 70, 71, 72

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	double         shift, and enter state 5
	int            shift, and enter state 6
	bool           shift, and enter state 7
	string         shift, and enter state 8

	Prog           goto state 9
	FuncDeclList   goto state 2
	FunDecl        goto state 3
	Type           goto state 4

State 1


	double         shift, and enter state 5
	int            shift, and enter state 6
	bool           shift, and enter state 7
	string         shift, and enter state 8

	FuncDeclList   goto state 2
	FunDecl        goto state 3
	Type           goto state 4

State 2

	Prog -> FuncDeclList .                              (rule 1)

	%eof           reduce using rule 1


State 3

	FuncDeclList -> FunDecl . FuncDeclList              (rule 2)
	FuncDeclList -> FunDecl .                           (rule 3)

	double         shift, and enter state 5
	int            shift, and enter state 6
	bool           shift, and enter state 7
	string         shift, and enter state 8
	%eof           reduce using rule 3

	FuncDeclList   goto state 11
	FunDecl        goto state 3
	Type           goto state 4

State 4

	FunDecl -> Type . ident '(' ParamList ')' Block     (rule 4)

	ident          shift, and enter state 10


State 5

	Type -> double .                                    (rule 71)

	ident          reduce using rule 71


State 6

	Type -> int .                                       (rule 69)

	ident          reduce using rule 69


State 7

	Type -> bool .                                      (rule 70)

	ident          reduce using rule 70


State 8

	Type -> string .                                    (rule 72)

	ident          reduce using rule 72


State 9

	%start_parser -> Prog .                             (rule 0)

	%eof           accept


State 10

	FunDecl -> Type ident . '(' ParamList ')' Block     (rule 4)

	'('            shift, and enter state 12


State 11

	FuncDeclList -> FunDecl FuncDeclList .              (rule 2)

	%eof           reduce using rule 2


State 12

	FunDecl -> Type ident '(' . ParamList ')' Block     (rule 4)

	')'            reduce using rule 7
	double         shift, and enter state 5
	int            shift, and enter state 6
	bool           shift, and enter state 7
	string         shift, and enter state 8

	ParamList      goto state 13
	Param          goto state 14
	Type           goto state 15

State 13

	FunDecl -> Type ident '(' ParamList . ')' Block     (rule 4)

	')'            shift, and enter state 18


State 14

	ParamList -> Param . ',' ParamList                  (rule 5)
	ParamList -> Param .                                (rule 6)

	')'            reduce using rule 6
	','            shift, and enter state 17


State 15

	Param -> Type . ident                               (rule 8)

	ident          shift, and enter state 16


State 16

	Param -> Type ident .                               (rule 8)

	')'            reduce using rule 8
	','            reduce using rule 8


State 17

	ParamList -> Param ',' . ParamList                  (rule 5)

	')'            reduce using rule 7
	double         shift, and enter state 5
	int            shift, and enter state 6
	bool           shift, and enter state 7
	string         shift, and enter state 8

	ParamList      goto state 21
	Param          goto state 14
	Type           goto state 15

State 18

	FunDecl -> Type ident '(' ParamList ')' . Block     (rule 4)

	'{'            shift, and enter state 20

	Block          goto state 19

State 19

	FunDecl -> Type ident '(' ParamList ')' Block .     (rule 4)

	double         reduce using rule 4
	int            reduce using rule 4
	bool           reduce using rule 4
	string         reduce using rule 4
	%eof           reduce using rule 4


State 20

	Block -> '{' . StmtList '}'                         (rule 27)

	num            shift, and enter state 38
	real           shift, and enter state 39
	str            shift, and enter state 40
	ident          shift, and enter state 41
	true           shift, and enter state 42
	false          shift, and enter state 43
	if             shift, and enter state 44
	while          shift, and enter state 45
	for            shift, and enter state 46
	return         shift, and enter state 47
	'('            shift, and enter state 48
	'{'            shift, and enter state 20
	'}'            reduce using rule 32
	'!'            shift, and enter state 49
	double         shift, and enter state 5
	int            shift, and enter state 6
	bool           shift, and enter state 7
	string         shift, and enter state 8
	PrintInt       shift, and enter state 50
	ScanInt        shift, and enter state 51
	PrintStr       shift, and enter state 52

	Stmt           goto state 22
	SimpleExp      goto state 23
	AssignStmTE    goto state 24
	AssignStmT     goto state 25
	AssignStm      goto state 26
	IfThen         goto state 27
	IfThenElse     goto state 28
	Block          goto state 29
	While          goto state 30
	For            goto state 31
	Return         goto state 32
	StmtList       goto state 33
	Exp            goto state 34
	VarAccess      goto state 35
	FunCall        goto state 36
	Type           goto state 37

State 21

	ParamList -> Param ',' ParamList .                  (rule 5)

	')'            reduce using rule 5


State 22

	StmtList -> Stmt . StmtList                         (rule 31)

	num            shift, and enter state 38
	real           shift, and enter state 39
	str            shift, and enter state 40
	ident          shift, and enter state 41
	true           shift, and enter state 42
	false          shift, and enter state 43
	if             shift, and enter state 44
	while          shift, and enter state 45
	for            shift, and enter state 46
	return         shift, and enter state 47
	'('            shift, and enter state 48
	'{'            shift, and enter state 20
	'}'            reduce using rule 32
	'!'            shift, and enter state 49
	double         shift, and enter state 5
	int            shift, and enter state 6
	bool           shift, and enter state 7
	string         shift, and enter state 8
	PrintInt       shift, and enter state 50
	ScanInt        shift, and enter state 51
	PrintStr       shift, and enter state 52

	Stmt           goto state 22
	SimpleExp      goto state 23
	AssignStmTE    goto state 24
	AssignStmT     goto state 25
	AssignStm      goto state 26
	IfThen         goto state 27
	IfThenElse     goto state 28
	Block          goto state 29
	While          goto state 30
	For            goto state 31
	Return         goto state 32
	StmtList       goto state 87
	Exp            goto state 34
	VarAccess      goto state 35
	FunCall        goto state 36
	Type           goto state 37

State 23

	Stmt -> SimpleExp . ';'                             (rule 9)

	';'            shift, and enter state 86


State 24

	Stmt -> AssignStmTE .                               (rule 10)
	SimpleExp -> AssignStmTE .                          (rule 20)

	num            reduce using rule 10
	real           reduce using rule 10
	str            reduce using rule 10
	ident          reduce using rule 10
	true           reduce using rule 10
	false          reduce using rule 10
	if             reduce using rule 10
	else           reduce using rule 10
	while          reduce using rule 10
	for            reduce using rule 10
	return         reduce using rule 10
	'('            reduce using rule 10
	';'            reduce using rule 20
	'{'            reduce using rule 10
	'}'            reduce using rule 10
	'!'            reduce using rule 10
	double         reduce using rule 10
	int            reduce using rule 10
	bool           reduce using rule 10
	string         reduce using rule 10
	PrintInt       reduce using rule 10
	ScanInt        reduce using rule 10
	PrintStr       reduce using rule 10


State 25

	Stmt -> AssignStmT .                                (rule 11)
	SimpleExp -> AssignStmT .                           (rule 21)

	num            reduce using rule 11
	real           reduce using rule 11
	str            reduce using rule 11
	ident          reduce using rule 11
	true           reduce using rule 11
	false          reduce using rule 11
	if             reduce using rule 11
	else           reduce using rule 11
	while          reduce using rule 11
	for            reduce using rule 11
	return         reduce using rule 11
	'('            reduce using rule 11
	';'            reduce using rule 21
	'{'            reduce using rule 11
	'}'            reduce using rule 11
	'!'            reduce using rule 11
	double         reduce using rule 11
	int            reduce using rule 11
	bool           reduce using rule 11
	string         reduce using rule 11
	PrintInt       reduce using rule 11
	ScanInt        reduce using rule 11
	PrintStr       reduce using rule 11


State 26

	Stmt -> AssignStm .                                 (rule 12)

	num            reduce using rule 12
	real           reduce using rule 12
	str            reduce using rule 12
	ident          reduce using rule 12
	true           reduce using rule 12
	false          reduce using rule 12
	if             reduce using rule 12
	else           reduce using rule 12
	while          reduce using rule 12
	for            reduce using rule 12
	return         reduce using rule 12
	'('            reduce using rule 12
	'{'            reduce using rule 12
	'}'            reduce using rule 12
	'!'            reduce using rule 12
	double         reduce using rule 12
	int            reduce using rule 12
	bool           reduce using rule 12
	string         reduce using rule 12
	PrintInt       reduce using rule 12
	ScanInt        reduce using rule 12
	PrintStr       reduce using rule 12


State 27

	Stmt -> IfThen .                                    (rule 13)

	num            reduce using rule 13
	real           reduce using rule 13
	str            reduce using rule 13
	ident          reduce using rule 13
	true           reduce using rule 13
	false          reduce using rule 13
	if             reduce using rule 13
	else           reduce using rule 13
	while          reduce using rule 13
	for            reduce using rule 13
	return         reduce using rule 13
	'('            reduce using rule 13
	'{'            reduce using rule 13
	'}'            reduce using rule 13
	'!'            reduce using rule 13
	double         reduce using rule 13
	int            reduce using rule 13
	bool           reduce using rule 13
	string         reduce using rule 13
	PrintInt       reduce using rule 13
	ScanInt        reduce using rule 13
	PrintStr       reduce using rule 13


State 28

	Stmt -> IfThenElse .                                (rule 14)

	num            reduce using rule 14
	real           reduce using rule 14
	str            reduce using rule 14
	ident          reduce using rule 14
	true           reduce using rule 14
	false          reduce using rule 14
	if             reduce using rule 14
	else           reduce using rule 14
	while          reduce using rule 14
	for            reduce using rule 14
	return         reduce using rule 14
	'('            reduce using rule 14
	'{'            reduce using rule 14
	'}'            reduce using rule 14
	'!'            reduce using rule 14
	double         reduce using rule 14
	int            reduce using rule 14
	bool           reduce using rule 14
	string         reduce using rule 14
	PrintInt       reduce using rule 14
	ScanInt        reduce using rule 14
	PrintStr       reduce using rule 14


State 29

	Stmt -> Block .                                     (rule 15)

	num            reduce using rule 15
	real           reduce using rule 15
	str            reduce using rule 15
	ident          reduce using rule 15
	true           reduce using rule 15
	false          reduce using rule 15
	if             reduce using rule 15
	else           reduce using rule 15
	while          reduce using rule 15
	for            reduce using rule 15
	return         reduce using rule 15
	'('            reduce using rule 15
	'{'            reduce using rule 15
	'}'            reduce using rule 15
	'!'            reduce using rule 15
	double         reduce using rule 15
	int            reduce using rule 15
	bool           reduce using rule 15
	string         reduce using rule 15
	PrintInt       reduce using rule 15
	ScanInt        reduce using rule 15
	PrintStr       reduce using rule 15


State 30

	Stmt -> While .                                     (rule 16)

	num            reduce using rule 16
	real           reduce using rule 16
	str            reduce using rule 16
	ident          reduce using rule 16
	true           reduce using rule 16
	false          reduce using rule 16
	if             reduce using rule 16
	else           reduce using rule 16
	while          reduce using rule 16
	for            reduce using rule 16
	return         reduce using rule 16
	'('            reduce using rule 16
	'{'            reduce using rule 16
	'}'            reduce using rule 16
	'!'            reduce using rule 16
	double         reduce using rule 16
	int            reduce using rule 16
	bool           reduce using rule 16
	string         reduce using rule 16
	PrintInt       reduce using rule 16
	ScanInt        reduce using rule 16
	PrintStr       reduce using rule 16


State 31

	Stmt -> For .                                       (rule 17)

	num            reduce using rule 17
	real           reduce using rule 17
	str            reduce using rule 17
	ident          reduce using rule 17
	true           reduce using rule 17
	false          reduce using rule 17
	if             reduce using rule 17
	else           reduce using rule 17
	while          reduce using rule 17
	for            reduce using rule 17
	return         reduce using rule 17
	'('            reduce using rule 17
	'{'            reduce using rule 17
	'}'            reduce using rule 17
	'!'            reduce using rule 17
	double         reduce using rule 17
	int            reduce using rule 17
	bool           reduce using rule 17
	string         reduce using rule 17
	PrintInt       reduce using rule 17
	ScanInt        reduce using rule 17
	PrintStr       reduce using rule 17


State 32

	Stmt -> Return .                                    (rule 18)

	num            reduce using rule 18
	real           reduce using rule 18
	str            reduce using rule 18
	ident          reduce using rule 18
	true           reduce using rule 18
	false          reduce using rule 18
	if             reduce using rule 18
	else           reduce using rule 18
	while          reduce using rule 18
	for            reduce using rule 18
	return         reduce using rule 18
	'('            reduce using rule 18
	'{'            reduce using rule 18
	'}'            reduce using rule 18
	'!'            reduce using rule 18
	double         reduce using rule 18
	int            reduce using rule 18
	bool           reduce using rule 18
	string         reduce using rule 18
	PrintInt       reduce using rule 18
	ScanInt        reduce using rule 18
	PrintStr       reduce using rule 18


State 33

	Block -> '{' StmtList . '}'                         (rule 27)

	'}'            shift, and enter state 85


State 34

	SimpleExp -> Exp .                                  (rule 19)
	Exp -> Exp . '+' Exp                                (rule 46)
	Exp -> Exp . '-' Exp                                (rule 47)
	Exp -> Exp . '*' Exp                                (rule 48)
	Exp -> Exp . '/' Exp                                (rule 49)
	Exp -> Exp . '%' Exp                                (rule 50)
	Exp -> Exp . '==' Exp                               (rule 51)
	Exp -> Exp . '!=' Exp                               (rule 52)
	Exp -> Exp . '<' Exp                                (rule 53)
	Exp -> Exp . '<=' Exp                               (rule 54)
	Exp -> Exp . '>' Exp                                (rule 55)
	Exp -> Exp . '>=' Exp                               (rule 56)
	Exp -> Exp . '&&' Exp                               (rule 57)
	Exp -> Exp . '||' Exp                               (rule 58)

	';'            reduce using rule 19
	'+'            shift, and enter state 72
	'-'            shift, and enter state 73
	'*'            shift, and enter state 74
	'/'            shift, and enter state 75
	'%'            shift, and enter state 76
	'=='           shift, and enter state 77
	'!='           shift, and enter state 78
	'<'            shift, and enter state 79
	'<='           shift, and enter state 80
	'>'            shift, and enter state 81
	'>='           shift, and enter state 82
	'&&'           shift, and enter state 83
	'||'           shift, and enter state 84


State 35

	AssignStm -> VarAccess . '=' Exp ';'                (rule 24)
	Exp -> VarAccess .                                  (rule 35)
	Exp -> VarAccess . PosOp                            (rule 38)

	';'            reduce using rule 35
	'++'           shift, and enter state 69
	'--'           shift, and enter state 70
	'+'            reduce using rule 35
	'-'            reduce using rule 35
	'*'            reduce using rule 35
	'/'            reduce using rule 35
	'%'            reduce using rule 35
	'=='           reduce using rule 35
	'!='           reduce using rule 35
	'<'            reduce using rule 35
	'<='           reduce using rule 35
	'>'            reduce using rule 35
	'>='           reduce using rule 35
	'&&'           reduce using rule 35
	'||'           reduce using rule 35
	'='            shift, and enter state 71

	PosOp          goto state 68

State 36

	Exp -> FunCall .                                    (rule 39)

	num            reduce using rule 39
	real           reduce using rule 39
	str            reduce using rule 39
	ident          reduce using rule 39
	true           reduce using rule 39
	false          reduce using rule 39
	if             reduce using rule 39
	else           reduce using rule 39
	while          reduce using rule 39
	for            reduce using rule 39
	return         reduce using rule 39
	'('            reduce using rule 39
	')'            reduce using rule 39
	','            reduce using rule 39
	';'            reduce using rule 39
	'{'            reduce using rule 39
	'}'            reduce using rule 39
	']'            reduce using rule 39
	'+'            reduce using rule 39
	'-'            reduce using rule 39
	'*'            reduce using rule 39
	'/'            reduce using rule 39
	'%'            reduce using rule 39
	'=='           reduce using rule 39
	'!='           reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	'!'            reduce using rule 39
	'&&'           reduce using rule 39
	'||'           reduce using rule 39
	double         reduce using rule 39
	int            reduce using rule 39
	bool           reduce using rule 39
	string         reduce using rule 39
	PrintInt       reduce using rule 39
	ScanInt        reduce using rule 39
	PrintStr       reduce using rule 39


State 37

	AssignStmTE -> Type . ident '=' Exp                 (rule 22)
	AssignStmT -> Type . IdentList                      (rule 23)

	ident          shift, and enter state 67

	VarAccess      goto state 65
	IdentList      goto state 66

State 38

	Exp -> num .                                        (rule 33)

	num            reduce using rule 33
	real           reduce using rule 33
	str            reduce using rule 33
	ident          reduce using rule 33
	true           reduce using rule 33
	false          reduce using rule 33
	if             reduce using rule 33
	else           reduce using rule 33
	while          reduce using rule 33
	for            reduce using rule 33
	return         reduce using rule 33
	'('            reduce using rule 33
	')'            reduce using rule 33
	','            reduce using rule 33
	';'            reduce using rule 33
	'{'            reduce using rule 33
	'}'            reduce using rule 33
	']'            reduce using rule 33
	'+'            reduce using rule 33
	'-'            reduce using rule 33
	'*'            reduce using rule 33
	'/'            reduce using rule 33
	'%'            reduce using rule 33
	'=='           reduce using rule 33
	'!='           reduce using rule 33
	'<'            reduce using rule 33
	'<='           reduce using rule 33
	'>'            reduce using rule 33
	'>='           reduce using rule 33
	'!'            reduce using rule 33
	'&&'           reduce using rule 33
	'||'           reduce using rule 33
	double         reduce using rule 33
	int            reduce using rule 33
	bool           reduce using rule 33
	string         reduce using rule 33
	PrintInt       reduce using rule 33
	ScanInt        reduce using rule 33
	PrintStr       reduce using rule 33


State 39

	Exp -> real .                                       (rule 34)

	num            reduce using rule 34
	real           reduce using rule 34
	str            reduce using rule 34
	ident          reduce using rule 34
	true           reduce using rule 34
	false          reduce using rule 34
	if             reduce using rule 34
	else           reduce using rule 34
	while          reduce using rule 34
	for            reduce using rule 34
	return         reduce using rule 34
	'('            reduce using rule 34
	')'            reduce using rule 34
	','            reduce using rule 34
	';'            reduce using rule 34
	'{'            reduce using rule 34
	'}'            reduce using rule 34
	']'            reduce using rule 34
	'+'            reduce using rule 34
	'-'            reduce using rule 34
	'*'            reduce using rule 34
	'/'            reduce using rule 34
	'%'            reduce using rule 34
	'=='           reduce using rule 34
	'!='           reduce using rule 34
	'<'            reduce using rule 34
	'<='           reduce using rule 34
	'>'            reduce using rule 34
	'>='           reduce using rule 34
	'!'            reduce using rule 34
	'&&'           reduce using rule 34
	'||'           reduce using rule 34
	double         reduce using rule 34
	int            reduce using rule 34
	bool           reduce using rule 34
	string         reduce using rule 34
	PrintInt       reduce using rule 34
	ScanInt        reduce using rule 34
	PrintStr       reduce using rule 34


State 40

	Exp -> str .                                        (rule 36)

	num            reduce using rule 36
	real           reduce using rule 36
	str            reduce using rule 36
	ident          reduce using rule 36
	true           reduce using rule 36
	false          reduce using rule 36
	if             reduce using rule 36
	else           reduce using rule 36
	while          reduce using rule 36
	for            reduce using rule 36
	return         reduce using rule 36
	'('            reduce using rule 36
	')'            reduce using rule 36
	','            reduce using rule 36
	';'            reduce using rule 36
	'{'            reduce using rule 36
	'}'            reduce using rule 36
	']'            reduce using rule 36
	'+'            reduce using rule 36
	'-'            reduce using rule 36
	'*'            reduce using rule 36
	'/'            reduce using rule 36
	'%'            reduce using rule 36
	'=='           reduce using rule 36
	'!='           reduce using rule 36
	'<'            reduce using rule 36
	'<='           reduce using rule 36
	'>'            reduce using rule 36
	'>='           reduce using rule 36
	'!'            reduce using rule 36
	'&&'           reduce using rule 36
	'||'           reduce using rule 36
	double         reduce using rule 36
	int            reduce using rule 36
	bool           reduce using rule 36
	string         reduce using rule 36
	PrintInt       reduce using rule 36
	ScanInt        reduce using rule 36
	PrintStr       reduce using rule 36


State 41

	VarAccess -> ident .                                (rule 59)
	VarAccess -> ident . '[' Exp ']'                    (rule 60)
	FunCall -> ident . '(' ExpList ')'                  (rule 63)

	num            reduce using rule 59
	real           reduce using rule 59
	str            reduce using rule 59
	ident          reduce using rule 59
	true           reduce using rule 59
	false          reduce using rule 59
	if             reduce using rule 59
	else           reduce using rule 59
	while          reduce using rule 59
	for            reduce using rule 59
	return         reduce using rule 59
	'('            shift, and enter state 63
			(reduce using rule 59)

	')'            reduce using rule 59
	','            reduce using rule 59
	';'            reduce using rule 59
	'{'            reduce using rule 59
	'}'            reduce using rule 59
	'['            shift, and enter state 64
	']'            reduce using rule 59
	'++'           reduce using rule 59
	'--'           reduce using rule 59
	'+'            reduce using rule 59
	'-'            reduce using rule 59
	'*'            reduce using rule 59
	'/'            reduce using rule 59
	'%'            reduce using rule 59
	'=='           reduce using rule 59
	'!='           reduce using rule 59
	'<'            reduce using rule 59
	'<='           reduce using rule 59
	'>'            reduce using rule 59
	'>='           reduce using rule 59
	'!'            reduce using rule 59
	'&&'           reduce using rule 59
	'||'           reduce using rule 59
	'='            reduce using rule 59
	double         reduce using rule 59
	int            reduce using rule 59
	bool           reduce using rule 59
	string         reduce using rule 59
	PrintInt       reduce using rule 59
	ScanInt        reduce using rule 59
	PrintStr       reduce using rule 59


State 42

	Exp -> true .                                       (rule 43)

	num            reduce using rule 43
	real           reduce using rule 43
	str            reduce using rule 43
	ident          reduce using rule 43
	true           reduce using rule 43
	false          reduce using rule 43
	if             reduce using rule 43
	else           reduce using rule 43
	while          reduce using rule 43
	for            reduce using rule 43
	return         reduce using rule 43
	'('            reduce using rule 43
	')'            reduce using rule 43
	','            reduce using rule 43
	';'            reduce using rule 43
	'{'            reduce using rule 43
	'}'            reduce using rule 43
	']'            reduce using rule 43
	'+'            reduce using rule 43
	'-'            reduce using rule 43
	'*'            reduce using rule 43
	'/'            reduce using rule 43
	'%'            reduce using rule 43
	'=='           reduce using rule 43
	'!='           reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'!'            reduce using rule 43
	'&&'           reduce using rule 43
	'||'           reduce using rule 43
	double         reduce using rule 43
	int            reduce using rule 43
	bool           reduce using rule 43
	string         reduce using rule 43
	PrintInt       reduce using rule 43
	ScanInt        reduce using rule 43
	PrintStr       reduce using rule 43


State 43

	Exp -> false .                                      (rule 44)

	num            reduce using rule 44
	real           reduce using rule 44
	str            reduce using rule 44
	ident          reduce using rule 44
	true           reduce using rule 44
	false          reduce using rule 44
	if             reduce using rule 44
	else           reduce using rule 44
	while          reduce using rule 44
	for            reduce using rule 44
	return         reduce using rule 44
	'('            reduce using rule 44
	')'            reduce using rule 44
	','            reduce using rule 44
	';'            reduce using rule 44
	'{'            reduce using rule 44
	'}'            reduce using rule 44
	']'            reduce using rule 44
	'+'            reduce using rule 44
	'-'            reduce using rule 44
	'*'            reduce using rule 44
	'/'            reduce using rule 44
	'%'            reduce using rule 44
	'=='           reduce using rule 44
	'!='           reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'!'            reduce using rule 44
	'&&'           reduce using rule 44
	'||'           reduce using rule 44
	double         reduce using rule 44
	int            reduce using rule 44
	bool           reduce using rule 44
	string         reduce using rule 44
	PrintInt       reduce using rule 44
	ScanInt        reduce using rule 44
	PrintStr       reduce using rule 44


State 44

	IfThen -> if . '(' Exp ')' Stmt                     (rule 25)
	IfThenElse -> if . '(' Exp ')' Stmt else Stmt       (rule 26)

	'('            shift, and enter state 62


State 45

	While -> while . '(' Exp ')' Stmt                   (rule 28)

	'('            shift, and enter state 61


State 46

	For -> for . '(' AssignStm Exp ';' Exp ')' Stmt     (rule 29)

	'('            shift, and enter state 60


State 47

	Return -> return . Exp ';'                          (rule 30)

	num            shift, and enter state 38
	real           shift, and enter state 39
	str            shift, and enter state 40
	ident          shift, and enter state 41
	true           shift, and enter state 42
	false          shift, and enter state 43
	'('            shift, and enter state 48
	'!'            shift, and enter state 49
	PrintInt       shift, and enter state 50
	ScanInt        shift, and enter state 51
	PrintStr       shift, and enter state 52

	Exp            goto state 59
	VarAccess      goto state 57
	FunCall        goto state 36

State 48

	Exp -> '(' . Exp ')'                                (rule 37)

	num            shift, and enter state 38
	real           shift, and enter state 39
	str            shift, and enter state 40
	ident          shift, and enter state 41
	true           shift, and enter state 42
	false          shift, and enter state 43
	'('            shift, and enter state 48
	'!'            shift, and enter state 49
	PrintInt       shift, and enter state 50
	ScanInt        shift, and enter state 51
	PrintStr       shift, and enter state 52

	Exp            goto state 58
	VarAccess      goto state 57
	FunCall        goto state 36

State 49

	Exp -> '!' . Exp                                    (rule 45)

	num            shift, and enter state 38
	real           shift, and enter state 39
	str            shift, and enter state 40
	ident          shift, and enter state 41
	true           shift, and enter state 42
	false          shift, and enter state 43
	'('            shift, and enter state 48
	'!'            shift, and enter state 49
	PrintInt       shift, and enter state 50
	ScanInt        shift, and enter state 51
	PrintStr       shift, and enter state 52

	Exp            goto state 56
	VarAccess      goto state 57
	FunCall        goto state 36

State 50

	Exp -> PrintInt . '(' Exp ')'                       (rule 41)

	'('            shift, and enter state 55


State 51

	Exp -> ScanInt . '(' ')'                            (rule 40)

	'('            shift, and enter state 54


State 52

	Exp -> PrintStr . '(' str ')'                       (rule 42)

	'('            shift, and enter state 53


State 53

	Exp -> PrintStr '(' . str ')'                       (rule 42)

	str            shift, and enter state 116


State 54

	Exp -> ScanInt '(' . ')'                            (rule 40)

	')'            shift, and enter state 115


State 55

	Exp -> PrintInt '(' . Exp ')'                       (rule 41)

	num            shift, and enter state 38
	real           shift, and enter state 39
	str            shift, and enter state 40
	ident          shift, and enter state 41
	true           shift, and enter state 42
	false          shift, and enter state 43
	'('            shift, and enter state 48
	'!'            shift, and enter state 49
	PrintInt       shift, and enter state 50
	ScanInt        shift, and enter state 51
	PrintStr       shift, and enter state 52

	Exp            goto state 114
	VarAccess      goto state 57
	FunCall        goto state 36

State 56
